fix: surrounding padding doesn't collapse
by relying on:
max-width and width fit-content for the card, and removing the padding from the max-width-wrapper

--- a/style.css
+++ b/style.css
@@ -10,22 +10,34 @@ body {
 }
 
 /* Add styles here! */
+
+.title {
+  font-size: 2rem;
+  line-height: 38px;
+  font-weight: 800;
+}
+
 .max-width-wrapper {
+  p {
+    font-size: 1.25rem;
+    line-height: 30px;
+    font-weight: 500;
+  }
+
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 168px;
-  padding-right: 168px;
 }
 
 .intro-chunk {
-  max-width: 320px;
+  max-width: 415px;
   padding: 16px;
 }
 
 .card {
-  max-width: 632px;
-  padding: 16px;
+  max-width: 800px;
+  padding: 24px;
+  width: fit-content;
   background-color: hsl(0deg, 0%, 100%);
   border-bottom: hsl(0deg, 0%, 60%) 8px solid;
 }
@@ -39,10 +51,14 @@ main {
 }
 
 .indented-heading {
+  font-size: 1.5rem;
+  font-weight: 800;
+  line-height: 28px;
   background-color: hsl(45deg, 100%, 50%);
   padding: 16px 16px 16px 24px;
   width: fit-content;
-  margin-left: -24px;
+  margin-left: -32px;
+  margin-top: -16px;
   border-bottom: hsl(45deg, 100%, 40%) 8px solid;
 }
 
